Fix navbar font color.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@ h6 {
 /* Navbar */
 .navbar a {
 	text-decoration: none;
-	color: #e6c0d1;
+	color: #63032e;
 }
 .logo-img {
 	margin-bottom: 1.2em;
