--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,14 +1,34 @@
-<footer>
+<div class="footer">
   <img class="footer-img" src="images/footer-background.png" alt="footer-img">
-  <div class="footer text-center">
-    <p class="footer-copyright-text">&copy; Copyright 2019
-      <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
-      ChinguV10 Team#14
-    </p></a> 
-    <p class="footer-copyright-text">Made with ❤️, Lots of ☕️ & Chingu </p>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-4">
+        <p style="line-height:1;"><br/></p>
+        <p class="footer-copyright-text text-left">AssistU &copy;2019
+          <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
+          ChinguV10 Team#14 🇮🇳 & 🇺🇸<br/>
+          </a>
+        </p>
+      </div>
+      <div class="col-lg-6 mid-text" >
+          <p style="line-height:1;"><br/></p>
+        <p class="footer-copyright-text text-center" style="font-display: inline-block">Made with ❤️, Lots of ☕️ & Chingu </p><br/>
+      </div>
+      <div class="col-lg-2 social-icons">
+        <a href="#">
+          <img src="images/social-media/twitter.png" width="30" height="30" alt="twitter-icon">
+        </a>
+        <a href="#">
+          <img src="images/social-media/facebook.png" width="30" height="30" alt="facebook=icon">
+        </a>
+        <a href="#">
+          <img src="images/social-media/instagram.png" width="30" height="30" alt="instagram-icon">
+        </a>
+      </div>
+    </div>
   </div>
-</footer>
-
+   
+</div>
 
 
 <!-- jQuery google cdn -->
