--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -45,6 +45,9 @@ h6 {
 	width: 100%;
 	height: auto;
 }
+.sec-title{
+	margin: 1.5rem 0;
+}
 
 /* Services Section */
 .services-section {
@@ -86,7 +89,7 @@ li {
 /* Our Mission Section */
 .mission {
 	background-color: #e1e3f0;
-	padding: 4em;
+	padding: 2rem 4rem 4rem 4rem;
 	width: 100%;
 }
 .mission .rw {
