--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,9 +14,10 @@ h6 {
 	font-family: 'Fredoka One', cursive;
 	padding: 0.5rem 0;
 }
-.sub-title {
-	font-size: 16px;
-}
+
+.sec-title{
+	margin: 1.5rem 0 0 0;
+} 
 
 /* Navbar */
 .navbar a {
@@ -43,11 +44,9 @@ h6 {
 	margin-top: 0;
 	z-index: -1;
 	width: 100%;
-	height: auto;
+	height: 330%;
 }
-.sec-title{
-	margin: 1.5rem 0;
-}
+
 
 /* Services Section */
 .services-section {
@@ -64,7 +63,9 @@ li {
 .leadership {
 	width: 100;
 }
-
+.name {
+	margin: 1rem 0;
+}
 .bio-div {
 	padding: 2% 7%;
 }
@@ -80,7 +81,22 @@ li {
 }
 .works-div {
 	position: absolute;
-	top: 78rem;
+	top: 61rem;
+}
+.works-text-left {
+	position: absolute;
+	top:19rem;
+	padding-right: 10rem;
+}
+.work-top-text{
+	padding: 2rem 10rem;
+}
+.works-text-right{
+	text-align: justify;
+	position: absolute;
+	top: 19rem;
+	font-size: 1.3rem;
+	padding-left: 10rem;
 }
 /* section .how-it-works {
 	background-image: url('https://github.com/chingu-voyages/v10-geckos-team-14/blob/landingPage/public/images/H-t-Wk-background.png?raw=true')
