--- a/views/home.ejs
+++ b/views/home.ejs
@@ -60,7 +60,7 @@
 			</div>
 		</div>
 	</div>
-	<h3 class="sub-title" style="padding-top: 4rem;">Fixers Ready to</h3>
+	<h2 class="" style="padding-top: 4rem;">Fixers Ready to</h2>
 	<div class="container">
 		<div class="row row-fixers-ready-to">
 			<div class="col-lg-6 text-left">
@@ -86,22 +86,36 @@
 
 <!-- How it Works section begins -->
 <section class="how-it-works text-center">
-	<img class="works-bk-img" src="images/H-t-Wk-background.png" alt="color and shape background" />
+	<img class="works-bk-img" src="images/H-t-Wk-background1.png" alt="color and shape background" />
 	<div class="works-div">
-		<h1 class="title">How it Works</h1>
-		<h6 class="sub-title rw">4 Simple Steps</h6>
-		<p class="works-text rw">
+		<h1 class="sec-title">How it Works</h1>
+		<h5 class=" rw">4 Simple Steps</h5>
+		<p class="work-top-text rw">
 			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+			been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+			galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+			been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+			galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
 			been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
 			galley of type and scrambled it to make a type specimen book.
 		</p>
-		<h6 class="works-text rw">
-			Select your fixer and complete reservation form.
-		</h6>
-		<p class="works-text rw">
-			Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
-			est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.
-		</p>
+		<div class="container">
+			<div class="row">
+			<div class="col-lg-6">
+				<h4 class="works-text-left rw text-left">
+					Select your fixer and complete reservation form.
+				</h4>	
+			</div>
+			<div class="col-lg-6">
+				<p class="works-text-right rw text-left">
+					Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
+					est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.
+				</p>
+			</div>	
+			</div>
+		</div>
+		
+		
 	</div>
 </section>
 <!-- end of How it Works section -->
@@ -109,8 +123,8 @@
 <!-- LeaderShip section begins -->
 <section class="leadership text-center">
 	<h1 class="sec-title">LeaderShip</h1>
-	<h6 class="sub-title rw">What we believe in</h6>
-	<div class="container">
+	<h5 class=" rw">What we believe in</h5>
+	<div class="container" style="padding: 0 5rem;">
 		<div class="row">
 			<div class="col-lg-6 bio-div">
 				<img
@@ -120,7 +134,7 @@
 					width="200"
 					height="200"
 				/>
-				<h5>Vaibhav Srivastava</h5>
+				<h5 class="name">Vaibhav Srivastava</h5>
 				<p class="bio-text">
 					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
 					been the industry's standard dummy text ever since the 1500s, when an unknown printer took
@@ -135,7 +149,7 @@
 					width="200"
 					height="200"
 				/>
-				<h5>Kathy Lambert</h5>
+				<h5 class="name">Kathy Lambert</h5>
 				<p class="bio-text">
 					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
 					been the industry's standard dummy text ever since the 1500s, when an unknown printer took
@@ -151,7 +165,7 @@
 <section class="mission">
 	<h1 class="sec-title rw">Our Mission</h1>
 
-	<h6 class="sub-title rw">What we believe in</h6>
+	<h5 class=" rw">What we believe in</h5>
 
 	<p class="rw">
 		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
