--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,7 @@
 <%- include("partials/header") -%>
+<div class="submit-success">
+		<h4><%= successMessage %></h4>
+	</div>
 <!-- service section begins -->
 <section class="container services-section text-center">
 	<h1 class="sec-title">Invest In Your Convenience</h1>
@@ -181,7 +184,7 @@
 <!-- Contact Us section begins -->
 <section class="container contact-us text-center">
 	<h1 class="sec-title">Contact Us</h1>
-	<form class="text-left">
+	<form action="/contact" method="post" class="text-left">
 		<div class="form-group contact-form">
 			<label class="form-heading" for="exampleInputEmail1">Your Email Address</label>
 			<input
@@ -190,6 +193,7 @@
 				id="exampleInputEmail1"
 				aria-describedby="emailHelp"
 				placeholder="something@about.com"
+				name= contactEmail
 			/>
 		</div>
 		<div class="form-group">
@@ -200,6 +204,7 @@
 				id="exampleInputSubject"
 				aria-describedby="emailHelp"
 				placeholder="Question about your service"
+				name="contactSubject"
 			/>
 		</div>
 		<div class="form-group">
@@ -209,16 +214,18 @@
 				class="form-control"
 				id="exampleFormControlTextarea1"
 				rows="8"
+				name="contactMessage"
 			></textarea>
 		</div>
 		<button
 			type="submit"
 			class="btn btn-lg btn-warning"
-			style="background-color: #F9D276; width:100%; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0;"
-		>
+			style="background-color: #F9D276; width:100%; font-family: 'Fredoka One', cursive; color: #63032e; margin:1.3rem 0;">
 			Send a message
 		</button>
 	</form>
+	
 </section>
+
 
 <%- include("partials/footer") -%>
