--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -32,7 +32,7 @@
 
 
 <!-- jQuery google cdn -->
-<script src="https://ajax.googleapis.com/ajax/libs/ext-core/3.1.0/ext-core.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <!-- custom js -->
 <script src="js/index.js" charset="utf-8"></script>
 <!-- bootstrap js -->
