--- a/views/home.ejs
+++ b/views/home.ejs
@@ -88,38 +88,51 @@
 <!-- end of service section -->
 
 <!-- How it Works section begins -->
-<section class="how-it-works text-center">
-	<img class="works-bk-img" src="images/H-t-Wk-background1.png" alt="color and shape background" />
-	<div class="works-div">
-		<h1 class="sec-title">How it Works</h1>
-		<h5 class=" rw">4 Simple Steps</h5>
-		<p class="work-top-text rw">
-			Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-			been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-			galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-			been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-			galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-			been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-			galley of type and scrambled it to make a type specimen book.
-		</p>
-		<div class="container">
-			<div class="row">
-			<div class="col-lg-6">
-				<h4 class="works-text-left rw text-left">
-					Select your fixer and complete reservation form.
-				</h4>	
-			</div>
-			<div class="col-lg-6">
-				<p class="works-text-right rw text-left">
-					Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
-					est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.
+
+<section class="works-sec">
+	<img class="works-bk-img" id="works-img-right" src="images/H-t-Wk-background-right.png" alt="color and shape background" />
+			<div class=" ">
+				<h1 class="sec-title">How it Works</h1>
+				<h5 class="rw">4 Simple Steps</h5>
+				<p class="work-top-text rw col-">
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+					galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
 				</p>
-			</div>	
+				<div class="container">
+					<div class="row">
+						<div class= "col-lg-3 col-sm-12">
+							<img src="images/Circle-1.png" alt="Circle 1">
+							<img class="line" src="images/rectangle-7.png" alt="line">
+						</div>
+						<div class= "col-lg-3 col-sm-12">
+							<img src="images/Circle-2.png" alt="Circle 2">
+						</div>
+						<div class= "col-lg-3 col-sm-12">
+							<img src="images/Circle-3.png" alt="Circle 3">
+						</div>
+						<div class= "col-lg-3 col-sm-12">
+							<img src="images/Circle-4.png" alt="Circle 4">
+						</div>
+					</div>
+				</div>
+				<div class="container">
+					<div class="row">
+						<div class="col">
+								<h4 class="work-text-left">
+									Select your fixer and complete reservation form.
+								</h4>
+						</div>
+						<div class= "col">
+							<p class="work-text-right">
+									Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
+									est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
-		</div>
-		
-		
-	</div>
+	<img class="works-bk-img" id="works-img-left" src="images/H-t-Wk-background-left.png" alt="color and shape background" />
 </section>
 <!-- end of How it Works section -->
 
@@ -168,7 +181,7 @@
 <section class="mission">
 	<h1 class="sec-title rw">Our Mission</h1>
 
-	<h5 class=" rw">What we believe in</h5>
+	<h5 class="rw">What we believe in</h5>
 
 	<p class="rw">
 		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
