--- a/views/home.ejs
+++ b/views/home.ejs
@@ -102,7 +102,7 @@
 				<div class="container">
 					<div class="row">
 						<div class= "col-lg-3 col-sm-12">
-							<img src="images/Circle-1.png" alt="Circle 1">
+							<img id="circle-1" src="images/Circle-1.png" alt="Circle 1">
 							<img class="line" src="images/rectangle-7.png" alt="line">
 						</div>
 						<div class= "col-lg-3 col-sm-12">
