--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
 					width="180"
 					height="180"
 					alt="repairs-icons"
-					class="service-img"
+					class="service-img shadow"
 				/>
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-12">
@@ -22,7 +22,7 @@
 					width="180"
 					height="180"
 					alt="plumbing-icon"
-					class="service-img"
+					class="service-img shadow"
 				/>
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-12">
@@ -31,7 +31,7 @@
 					width="180"
 					height="180"
 					alt="housekeeping-icon"
-					class="service-img"
+					class="service-img shadow"
 				/>
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-12">
@@ -40,7 +40,7 @@
 					width="180"
 					height="180"
 					alt="admin-icon"
-					class="service-img"
+					class="service-img shadow"
 				/>
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-12">
@@ -49,7 +49,7 @@
 					width="180"
 					height="180"
 					alt="lawncare-icon"
-					class="service-img"
+					class="service-img shadow"
 				/>
 			</div>
 			<div class="col-lg-4 col-md-6 col-sm-12">
@@ -58,7 +58,7 @@
 					width="180"
 					height="180"
 					alt="personal-driver-icon"
-					class="service-img"
+					class="service-img shadow"
 				/>
 			</div>
 		</div>
@@ -94,11 +94,17 @@
 			<div class=" ">
 				<h1 class="sec-title">How it Works</h1>
 				<h5 class="rw">4 Simple Steps</h5>
-				<p class="work-top-text rw col-">
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
-					been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-					galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-				</p>
+				<div class="container">
+					<div class="row">
+						<div class="col">
+							<p class="work-text" style="text-align: justify">
+								Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
+								been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
+								galley of type and scrambled it to make a type specimen book.Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+							</p>
+						</div>
+					</div>
+				</div>
 				<div class="container">
 					<div class="row">
 						<div class= "col-lg-3 col-sm-12">
@@ -107,24 +113,27 @@
 						</div>
 						<div class= "col-lg-3 col-sm-12">
 							<img src="images/Circle-2.png" alt="Circle 2">
+							<img class="line" src="images/rectangle-7.png" alt="line">
 						</div>
 						<div class= "col-lg-3 col-sm-12">
 							<img src="images/Circle-3.png" alt="Circle 3">
+							<img class="line" src="images/rectangle-7.png" alt="line">
 						</div>
 						<div class= "col-lg-3 col-sm-12">
 							<img src="images/Circle-4.png" alt="Circle 4">
+							<img class="line" src="images/rectangle-7.png" alt="line" style="visibility: hidden; width: 50%;">
 						</div>
 					</div>
 				</div>
 				<div class="container">
 					<div class="row">
-						<div class="col">
-								<h4 class="work-text-left">
+						<div class="col-lg-6 col-sm-12">
+								<h4 class="work-text-left work-text">
 									Select your fixer and complete reservation form.
 								</h4>
 						</div>
-						<div class= "col">
-							<p class="work-text-right">
+						<div class= "col-lg-6 col-sm-12">
+							<p class="work-text-right work-text">
 									Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis
 									est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere.
 							</p>
@@ -183,7 +192,7 @@
 
 	<h5 class="rw">What we believe in</h5>
 
-	<p class="rw">
+	<p class="rw" style="text-align: justify">
 		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
 		the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
 		of type and scrambled it to make a type specimen book. Lorem Ipsum is simply dummy text of the
