--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
   <img class="footer-img" src="images/footer-background.png" alt="footer-img">
   <div class="container">
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col">
         <p style="line-height:1;"><br/></p>
         <p class="footer-copyright-text text-left">AssistU &copy;2019
           <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
@@ -10,11 +10,11 @@
           </a>
         </p>
       </div>
-      <div class="col-lg-6 mid-text" >
+      <div class="col mid-text" >
           <p style="line-height:1;"><br/></p>
         <p class="footer-copyright-text text-center" style="font-display: inline-block">Made with ❤️, Lots of ☕️ & Chingu </p><br/>
       </div>
-      <div class="col-lg-2 social-icons">
+      <div class="col social-icons">
         <a href="#">
           <img src="images/social-media/twitter.png" width="30" height="30" alt="twitter-icon">
         </a>
