--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,9 +2,9 @@
   <img class="footer-img" src="images/footer-background.png" alt="footer-img">
   <div class="container">
     <div class="row">
-      <div class="col">
+      <div class="col text-left f1">
         <p style="line-height:1;"><br/></p>
-        <p class="footer-copyright-text text-left">AssistU &copy;2019
+        <p class="footer-copyright-text">AssistU &copy;2019
           <a herf="https://github.com/chingu-voyages/v10-geckos-team-14">
           ChinguV10 Team#14 🇮🇳 & 🇺🇸<br/>
           </a>
