--- a/views/home.ejs
+++ b/views/home.ejs
@@ -91,7 +91,7 @@
 
 <section class="works-sec">
 	<img class="works-bk-img" id="works-img-right" src="images/H-t-Wk-background-right.png" alt="color and shape background" />
-			<div class=" ">
+			<div class=" " style="z-index: 2;">
 				<h1 class="sec-title">How it Works</h1>
 				<h5 class="rw">4 Simple Steps</h5>
 				<div class="container">
@@ -119,14 +119,14 @@
 							<img src="images/Circle-3.png" alt="Circle 3">
 							<img class="line" src="images/rectangle-7.png" alt="line">
 						</div>
-						<div class= "col-lg-3 col-sm-12">
+						<div class= "col-lg-3 col-sm-12 margin-for-ipad ">
 							<img src="images/Circle-4.png" alt="Circle 4">
-							<img class="line" src="images/rectangle-7.png" alt="line" style="visibility: hidden; width: 50%;">
+							<img class="line line-4-hide" src="images/rectangle-7.png" alt="line">
 						</div>
 					</div>
 				</div>
-				<div class="container">
-					<div class="row">
+				<div class="container ">
+					<div class="row work-btm-text">
 						<div class="col-lg-6 col-sm-12">
 								<h4 class="work-text-left work-text">
 									Select your fixer and complete reservation form.
