changed thanks page

--- a/views/thanks.ejs
+++ b/views/thanks.ejs
@@ -2,7 +2,7 @@
 <div class="thanks-center">
     <h2 class="display-4">Thank you for your message!</h2>
     <p class="lead">We really appreciate your interest in our services. One of our representatives will be in touch with you soon.</p>
-    <a class="btn btn-primary btn-lg" href="http://localhost:3000" role="button"
+    <a class="btn btn-primary btn-lg" href="https://assist-u.herokuapp.com/" role="button"
     style="background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none;"
     >Return Home</a>
   </div>
