--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -186,6 +186,21 @@ section.works-sec {
 	padding: 0 3rem;
 }
 
+/*! Booking Page */
+
+/* .when-sec {
+	align-items: left;
+} */
+
+.upload-image-box {
+	text-align: right;
+}
+
+.submitBtn {
+	text-align: center;
+	justify-content: center;
+}
+
 /* Footer Section*/
 .footer {
 	position: relative;
@@ -223,6 +238,7 @@ section.works-sec {
 }
 
 /* Media Queries */
+
 @media (max-width: 576px) {
 	.footer-copyright-text {
 		font-size: 0.7rem;
@@ -239,6 +255,10 @@ section.works-sec {
 	}
 	.f1 {
 		padding-left: 2.6rem;
+	}
+	.upload-image-box {
+		text-align: center;
+		margin-top: 1.5rem;
 	}
 }
 @media (min-width: 576px) {
@@ -313,9 +333,3 @@ section.works-sec {
 		width: 10% !important;
 	}
 }
-
-/*! Booking Page */
-
-/* .when-sec {
-	align-items: left;
-} */
