Correct css layout styling for booking and thanks pages

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,4 +1,5 @@
 /* Overall App Styling */
+
 body {
 	background-color: #f1f7f0;
 	color: #63032e;
@@ -24,7 +25,8 @@ hr {
 	margin: 1.5rem 0 0 0;
 }
 
-/* Navbar */
+/*! Navbar */
+
 .navbar a {
 	text-decoration: none;
 	color: #63032e;
@@ -52,7 +54,8 @@ hr {
 	height: 330%;
 }
 
-/* Services Section */
+/*! Services Section */
+
 .services-section {
 	margin-top: 6em;
 }
@@ -63,11 +66,12 @@ li {
 	margin-top: 1.5rem;
 }
 .shadow {
-	box-shadow: 0 0.5rem 1rem rgba(99, 21, 47, 0.5) !important;
+	box-shadow: 0 0.5rem 1rem #63152f80 !important;
 	border-radius: 2.5rem;
 }
 
-/* LeaderShip Section */
+/*! LeaderShip Section */
+
 .leadership {
 	width: 100;
 }
@@ -81,7 +85,7 @@ li {
 	text-align: justify;
 }
 
-/* How it `Works` Section */
+/*! How it `Works` Section */
 section.works-sec {
 	background-color: #e1e3f0;
 	width: 100%;
@@ -146,7 +150,8 @@ section.works-sec {
 	justify-content: space-between;
 }
 
-/* Our `Mission` Section */
+/*! Our `Mission` Section */
+
 .mission {
 	background-color: #e1e3f0;
 	padding: 2rem 4rem 4rem 4rem;
@@ -164,7 +169,7 @@ section.works-sec {
 	font-family: 'Domine', serif !important;
 }
 
-/* Contact Us Section */
+/*! Contact Us Section */
 
 .form-control:visited {
 	color: #f9d276 !important;
@@ -198,10 +203,9 @@ section.works-sec {
 
 .submitBtn {
 	text-align: center;
-	justify-content: center;
 }
 
-/* Footer Section*/
+/*! Footer Section*/
 .footer {
 	position: relative;
 	bottom: 0;
@@ -237,7 +241,23 @@ section.works-sec {
 	right: 0; */
 }
 
-/* Media Queries */
+/*! Thanks page */
+
+.thanks-center {
+	position: relative;
+	height: 50px;
+	margin-top: 13% !important;
+	padding-bottom: 8%;
+}
+.thanks-center {
+	position: relative;
+	height: 50px;
+	margin-top: 13% !important;
+	padding-bottom: 8%;
+}
+
+
+/*! Media Queries */
 
 @media (max-width: 576px) {
 	.footer-copyright-text {
@@ -302,20 +322,15 @@ section.works-sec {
 	.row-fixers-ready-to {
 		padding: 1rem 1rem;
 	}
-
-	/* TODO - [ ] Confirm below removal. */
-	.circle-1 {
-		padding-right: 3.5rem;
-	}
 }
 @media (max-width: 770px) and (min-width: 740px) {
 	.line {
 		visibility: hidden;
 		width: 70%;
 	}
-	.margin-for-ipad {
-		/* margin-left: 16rem; */
-	}
+	/* .margin-for-ipad {
+		margin-left: 16rem;
+	} */
 	.work-btm-text {
 		margin-top: 2rem;
 	}
@@ -327,9 +342,20 @@ section.works-sec {
 		width: -2%;
 	}
 }
+@media (max-width: 1900px) and (min-width: 1800px) {
+	.footer {
+		position: relative;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		margin-top: 25.5rem;
+		margin-bottom: 0;
+		font-family: 'Fredoka One', cursive;
+	}
+}
 @media (max-width: 1030px) and (min-width: 1000px) {
 	.line-4-hide {
 		visibility: hidden;
 		width: 10% !important;
 	}
-}
+}​
