Correct css layout styling for submitBtn

--- a/views/booking.ejs
+++ b/views/booking.ejs
@@ -7,7 +7,7 @@
 	<div class="row">
 		<!-- column 1 -->
 		<div class="col-lg-8 text-left">
-			<h3 class="text-left">What</h3><br/>
+			<h3 class=" sec-title text-left">What</h3><br/>
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-3">
@@ -161,15 +161,8 @@
 						></textarea>
 					</div>
 				</div>
-				<div class="text-center">
-				<button
-					class="btn btn-warning submitBtn"
-					style="margin-top:1.5rem; width:250px; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none;"
-					type="submit"
-				>
-					Confirm Fixer Request
-				</button></div>
-			</form>
+				
+			
 
 			<!-- Form end -->
 		</div>
@@ -189,6 +182,14 @@
 		</div>
 	</div>
 </div>
-
+<div class="text-center">
+	<button
+		class="btn btn-lg btn-outline-warning submitBtn"
+		style="margin-top:1.5rem; width:50%; background-color: #F9D276; font-family: 'Fredoka One', cursive; color: #63032e; border-style: none; border-radius:2rem;"
+		type="submit"
+	>
+		Confirm Fixer Request
+	</button></div>
+</form>
 <!-- booking section ends -->
 <%- include("partials/footer") -%>
