Add updated metadate in header.js

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+		<!-- Author Information -->
 		<meta
 			name="Vaibhav Srivastava"
 			content="Author Email"
@@ -13,8 +14,29 @@
 			content="Author GitHub Portfolio"
 			href="https://github.com/vai1205"
 		/>
-		<meta name="author" content="Author Personal Portfolio" href="https://kathylambert.me" />
-		<meta name="author" content="Author GitHub Portfolio" href="https://github.com/CodeMeKathy" />
+		<meta name="author" content="Kathy Lambert Personal Portfolio" href="https://kathylambert.me" />
+		<meta
+			name="author"
+			content="Kathy Lambert GitHub Portfolio"
+			href="https://github.com/CodeMeKathy"
+		/>
+
+		<!-- Social Media Share Links -->
+		<meta property="og:title" content="AssistU | On-Demand Household and Personal Services" />
+		<meta property="og:url" content="https://assist-u.herokuapp.com/" />
+		<meta property="og:description" content="AssistU | On-Demand Household and Personal Services" />
+		<meta property="og:type" content="website" />
+		<meta property="og:locale" content="en_US" />
+		<meta property="og:locale" content="hi_IN" />
+		<meta
+			property="og:image"
+			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/mstile-150x150.png?raw=true"
+		/>
+		<meta
+			property="image"
+			content="https://github.com/chingu-voyages/v10-geckos-team-14/blob/master/public/mstile-150x150.png?raw=true"
+		/>
+
 		<title>Assist-U | On-Demand Household and Personal Services</title>
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
@@ -63,4 +85,5 @@
 				<h6 class="sign-in-up">Sign In or Sign Up</h6>
 			</a>
 		</nav>
-
+	</body>
+</html>
